fixed students return type
